# 3grit

./: .gitignore  docker-compose.yaml  pyproject.toml
app/: Dockerfile  Dockerfile.dev  main.py  pyproject.toml  requirements.txt
app/api/chat/: chat.py
app/api/chat/module/: langchain.py  model.py
app/api/map/: map.py
app/chat/: chat.py  payload.py
app/chat/module/: helper.py  model.py  run.py
app/map/: map.py
app/payload/: chat_payload.py  map_payload.py
app/requirements/: pyproject.toml  requirements.txt
app/src/: main.py
app/src/chat/: chat.py
app/src/chat/module/: helper.py  model.py  run.py
app/src/map/: map.py
app/src/map/domain/: branch.py
app/src/map/infra/db_models/: branch.py  brand.py  room.py  wishlist_has_room.py
app/src/user/application/: user_service.py
app/src/user/domain/: user.py
app/src/user/domain/repository/: user_repo.py
app/src/user/infra/db_models/: user.py
app/src/user/infra/repository/: user_repo.py
app/src/user/interface/controllers/: user_controller.py
app/src/utils/: auth.py  config.py  constants.py  containers.py  crypto.py  database.py
app/src/utils/database/: alembic.ini  database.py  temp_database.py  temp_database_models.py
app/src/utils/database/alchemy/: __init__.py
app/src/utils/database/migrations/: env.py
app/src/utils/database/migrations/versions/: 2024_11_23_1411-1fd39c04cc26_add_user_table.py
app/user/: user.py
app/utils/client/: memory.py  nosql.py  vector.py
client/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json
client/app/components/: create-user-form.tsx
client/src/: App.tsx  main.tsx  types.ts
client/src/api/: client.ts
client/src/components/: RestaurantMap.tsx
client/src/hooks/: useAuth.ts  useChat.ts  useUsers.ts
mongo/: Dockerfile
nginx/: Dockerfile  nginx.conf
nginx/conf.d/: default.conf
postgres/: Dockerfile
redis/: Dockerfile
